--- a/2.5 isin() method.ipynb
+++ b/2.5 isin() method.ipynb
@@ -487,24 +487,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5051b01e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#find notebooks or ultrabooks from apple or hp\n",
-    "filter1 = df_laptops['TypeName'].isin(['Notebook', ''])"
+    "filter1 = df_laptops['TypeName'].isin(['Notebook', 'Netbook'])\n",
+    "filter2 = df_laptops['Company'].isin(['Apple', 'HP'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "38d88465",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laptop_ID</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>250 G6</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>575.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>250 G6</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>500GB HDD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>393.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>250 G6</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i3 6006U 2GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>500GB HDD</td>\n",
+       "      <td>Intel HD Graphics 520</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>344.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>255 G6</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>AMD E-Series E2-9000e 1.5GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>500GB HDD</td>\n",
+       "      <td>AMD Radeon R2</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>258.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>ProBook 470</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 8250U 1.6GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>Nvidia GeForce 930MX</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.5kg</td>\n",
+       "      <td>896.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1282</th>\n",
+       "      <td>1300</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>Stream 11-Y000na</td>\n",
+       "      <td>Netbook</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core N3060 1.6GHz</td>\n",
+       "      <td>2GB</td>\n",
+       "      <td>32GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 400</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.17kg</td>\n",
+       "      <td>209.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1287</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>15-AC110nv (i7-6500U/6GB/1TB/Radeon</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Core i7 6500U 2.5GHz</td>\n",
+       "      <td>6GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>AMD Radeon R5 M330</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.19kg</td>\n",
+       "      <td>764.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1294</th>\n",
+       "      <td>1312</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>Pavilion 15-AW003nv</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>AMD A9-Series 9410 2.9GHz</td>\n",
+       "      <td>6GB</td>\n",
+       "      <td>1.0TB Hybrid</td>\n",
+       "      <td>AMD Radeon R7 M440</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.04kg</td>\n",
+       "      <td>549.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>1314</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>Stream 11-Y000na</td>\n",
+       "      <td>Netbook</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core N3060 1.6GHz</td>\n",
+       "      <td>2GB</td>\n",
+       "      <td>32GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 400</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.17kg</td>\n",
+       "      <td>209.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1301</th>\n",
+       "      <td>1319</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>15-AC110nv (i7-6500U/6GB/1TB/Radeon</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Core i7 6500U 2.5GHz</td>\n",
+       "      <td>6GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>AMD Radeon R5 M330</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.19kg</td>\n",
+       "      <td>764.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>193 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      laptop_ID Company                              Product  TypeName  \\\n",
+       "2             3      HP                               250 G6  Notebook   \n",
+       "10           11      HP                               250 G6  Notebook   \n",
+       "11           12      HP                               250 G6  Notebook   \n",
+       "22           23      HP                               255 G6  Notebook   \n",
+       "29           30      HP                          ProBook 470  Notebook   \n",
+       "...         ...     ...                                  ...       ...   \n",
+       "1282       1300      HP                     Stream 11-Y000na   Netbook   \n",
+       "1287       1305      HP  15-AC110nv (i7-6500U/6GB/1TB/Radeon  Notebook   \n",
+       "1294       1312      HP                  Pavilion 15-AW003nv  Notebook   \n",
+       "1296       1314      HP                     Stream 11-Y000na   Netbook   \n",
+       "1301       1319      HP  15-AC110nv (i7-6500U/6GB/1TB/Radeon  Notebook   \n",
+       "\n",
+       "      Inches   ScreenResolution                                   Cpu  Ram  \\\n",
+       "2       15.6  Full HD 1920x1080            Intel Core i5 7200U 2.5GHz  8GB   \n",
+       "10      15.6           1366x768            Intel Core i5 7200U 2.5GHz  4GB   \n",
+       "11      15.6  Full HD 1920x1080              Intel Core i3 6006U 2GHz  4GB   \n",
+       "22      15.6           1366x768          AMD E-Series E2-9000e 1.5GHz  4GB   \n",
+       "29      17.3  Full HD 1920x1080            Intel Core i5 8250U 1.6GHz  8GB   \n",
+       "...      ...                ...                                   ...  ...   \n",
+       "1282    11.6           1366x768  Intel Celeron Dual Core N3060 1.6GHz  2GB   \n",
+       "1287    15.6           1366x768            Intel Core i7 6500U 2.5GHz  6GB   \n",
+       "1294    15.6  Full HD 1920x1080             AMD A9-Series 9410 2.9GHz  6GB   \n",
+       "1296    11.6           1366x768  Intel Celeron Dual Core N3060 1.6GHz  2GB   \n",
+       "1301    15.6           1366x768            Intel Core i7 6500U 2.5GHz  6GB   \n",
+       "\n",
+       "                  Memory                    Gpu       OpSys  Weight  \\\n",
+       "2              256GB SSD  Intel HD Graphics 620       No OS  1.86kg   \n",
+       "10             500GB HDD  Intel HD Graphics 620       No OS  1.86kg   \n",
+       "11             500GB HDD  Intel HD Graphics 520       No OS  1.86kg   \n",
+       "22             500GB HDD          AMD Radeon R2       No OS  1.86kg   \n",
+       "29               1TB HDD   Nvidia GeForce 930MX  Windows 10   2.5kg   \n",
+       "...                  ...                    ...         ...     ...   \n",
+       "1282  32GB Flash Storage  Intel HD Graphics 400  Windows 10  1.17kg   \n",
+       "1287             1TB HDD     AMD Radeon R5 M330  Windows 10  2.19kg   \n",
+       "1294        1.0TB Hybrid     AMD Radeon R7 M440  Windows 10  2.04kg   \n",
+       "1296  32GB Flash Storage  Intel HD Graphics 400  Windows 10  1.17kg   \n",
+       "1301             1TB HDD     AMD Radeon R5 M330  Windows 10  2.19kg   \n",
+       "\n",
+       "      Price_euros  \n",
+       "2          575.00  \n",
+       "10         393.90  \n",
+       "11         344.99  \n",
+       "22         258.00  \n",
+       "29         896.00  \n",
+       "...           ...  \n",
+       "1282       209.00  \n",
+       "1287       764.00  \n",
+       "1294       549.99  \n",
+       "1296       209.00  \n",
+       "1301       764.00  \n",
+       "\n",
+       "[193 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#filter dataframes\n",
+    "df_laptops[filter1 & filter2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d88465",
+   "id": "18dc9c95",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#filter dataframes"
-   ]
+   "source": []
   }
  ],
  "metadata": {
