--- a/3.6 Create random sample with sample() method.ipynb
+++ b/3.6 Create random sample with sample() method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "21735bde",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "dba86040",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "cd3ddc64",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "[18278 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "54401ec7",
    "metadata": {},
    "outputs": [
@@ -261,48 +261,444 @@
      "data": {
       "text/plain": [
        "short_name\n",
-       "G. Hairemans          Belgium\n",
-       "M. Franke             Germany\n",
-       "K. LuaLua            DR Congo\n",
-       "P. Gori                 Italy\n",
-       "Kaíquão Castro         Brazil\n",
-       "A. Dawson             England\n",
-       "G. Arias                Chile\n",
-       "N. Foor           Netherlands\n",
-       "Y. Ibrahim            Germany\n",
-       "Zhou Ting            China PR\n",
+       "M. Burruchaga    Argentina\n",
+       "F. Oswald          Germany\n",
+       "K. Sheppard        England\n",
+       "P. Sontheimer      Germany\n",
+       "H. Nilsson          Sweden\n",
+       "M. Moscati           Italy\n",
+       "Adrián López         Spain\n",
+       "L. Burge           England\n",
+       "A. Smith           England\n",
+       "S. Pabón          Colombia\n",
        "Name: nationality, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#extract 10 random elements from the 'nationality' column\n",
-    "df['nationality'].sample(10)"
+    "df['nationality'].sample(10, random_state=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "60d8be48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>long_name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>height_cm</th>\n",
+       "      <th>weight_kg</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>club</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>short_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>N. Onuoha</th>\n",
+       "      <td>Chinedum Onuoha</td>\n",
+       "      <td>32</td>\n",
+       "      <td>11/12/1986</td>\n",
+       "      <td>188</td>\n",
+       "      <td>78</td>\n",
+       "      <td>England</td>\n",
+       "      <td>Real Salt Lake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>J. Breitez</th>\n",
+       "      <td>Jorge Breitez</td>\n",
+       "      <td>33</td>\n",
+       "      <td>8/18/1985</td>\n",
+       "      <td>174</td>\n",
+       "      <td>71</td>\n",
+       "      <td>Ecuador</td>\n",
+       "      <td>Ecuador</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M. Martic</th>\n",
+       "      <td>Manuel Martic</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8/15/1995</td>\n",
+       "      <td>189</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>SK Rapid Wien</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C. Carlsson</th>\n",
+       "      <td>Christoffer Carlsson</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1/15/1989</td>\n",
+       "      <td>172</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Falkenbergs FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yang Wanshun</th>\n",
+       "      <td>???</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1/16/1996</td>\n",
+       "      <td>178</td>\n",
+       "      <td>75</td>\n",
+       "      <td>China PR</td>\n",
+       "      <td>Tianjin TEDA FC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R. Strachan</th>\n",
+       "      <td>Rob Strachan</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11/1/2000</td>\n",
+       "      <td>180</td>\n",
+       "      <td>70</td>\n",
+       "      <td>England</td>\n",
+       "      <td>Millwall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carvamelinho</th>\n",
+       "      <td>Samuel Thomas Carvalho Melo</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2/29/1984</td>\n",
+       "      <td>178</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Grêmio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B. Al Ahbabi</th>\n",
+       "      <td>Bandar Al Ahbabi</td>\n",
+       "      <td>28</td>\n",
+       "      <td>7/9/1990</td>\n",
+       "      <td>169</td>\n",
+       "      <td>62</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>Al Ain FC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pablo Pérez</th>\n",
+       "      <td>Pablo Pérez Rodríguez</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8/2/1993</td>\n",
+       "      <td>188</td>\n",
+       "      <td>79</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Real Sporting de Gijón</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wang Weilong</th>\n",
+       "      <td>Weilong Wang</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2/24/1988</td>\n",
+       "      <td>186</td>\n",
+       "      <td>80</td>\n",
+       "      <td>China PR</td>\n",
+       "      <td>Shenzhen FC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3656 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                long_name  age         dob  height_cm  \\\n",
+       "short_name                                                              \n",
+       "N. Onuoha                 Chinedum Onuoha   32  11/12/1986        188   \n",
+       "J. Breitez                  Jorge Breitez   33   8/18/1985        174   \n",
+       "M. Martic                   Manuel Martic   23   8/15/1995        189   \n",
+       "C. Carlsson          Christoffer Carlsson   30   1/15/1989        172   \n",
+       "Yang Wanshun                          ???   23   1/16/1996        178   \n",
+       "...                                   ...  ...         ...        ...   \n",
+       "R. Strachan                  Rob Strachan   18   11/1/2000        180   \n",
+       "Carvamelinho  Samuel Thomas Carvalho Melo   35   2/29/1984        178   \n",
+       "B. Al Ahbabi             Bandar Al Ahbabi   28    7/9/1990        169   \n",
+       "Pablo Pérez         Pablo Pérez Rodríguez   25    8/2/1993        188   \n",
+       "Wang Weilong                 Weilong Wang   31   2/24/1988        186   \n",
+       "\n",
+       "              weight_kg           nationality                    club  \n",
+       "short_name                                                             \n",
+       "N. Onuoha            78               England          Real Salt Lake  \n",
+       "J. Breitez           71               Ecuador                 Ecuador  \n",
+       "M. Martic            81               Austria           SK Rapid Wien  \n",
+       "C. Carlsson          73                Sweden          Falkenbergs FF  \n",
+       "Yang Wanshun         75              China PR         Tianjin TEDA FC  \n",
+       "...                 ...                   ...                     ...  \n",
+       "R. Strachan          70               England                Millwall  \n",
+       "Carvamelinho         75                Brazil                  Grêmio  \n",
+       "B. Al Ahbabi         62  United Arab Emirates               Al Ain FC  \n",
+       "Pablo Pérez          79                 Spain  Real Sporting de Gijón  \n",
+       "Wang Weilong         80              China PR             Shenzhen FC  \n",
+       "\n",
+       "[3656 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#extract a random 20% sample of the dataframe\n"
+    "#extract a random 20% sample of the dataframe\n",
+    "df.sample(frac=.2, random_state=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9e2ffce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>long_name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>dob</th>\n",
+       "      <th>height_cm</th>\n",
+       "      <th>weight_kg</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>club</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>short_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>I. Pop</th>\n",
+       "      <td>Ionu? Pop</td>\n",
+       "      <td>21</td>\n",
+       "      <td>8/1/1997</td>\n",
+       "      <td>190</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Romania</td>\n",
+       "      <td>FC Hermannstadt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kim Tae Hwan</th>\n",
+       "      <td>??? ???</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7/24/1989</td>\n",
+       "      <td>180</td>\n",
+       "      <td>72</td>\n",
+       "      <td>Korea Republic</td>\n",
+       "      <td>Ulsan Hyundai FC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>L. Agbenyenu</th>\n",
+       "      <td>Lumor Agbenyenu</td>\n",
+       "      <td>22</td>\n",
+       "      <td>8/10/1996</td>\n",
+       "      <td>175</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Ghana</td>\n",
+       "      <td>RCD Mallorca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y. Tolosa</th>\n",
+       "      <td>Yeison Tolosa</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6/12/1999</td>\n",
+       "      <td>170</td>\n",
+       "      <td>68</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Deportivo Cali</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A. Barberis</th>\n",
+       "      <td>Andrea Barberis</td>\n",
+       "      <td>25</td>\n",
+       "      <td>12/11/1993</td>\n",
+       "      <td>177</td>\n",
+       "      <td>72</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Crotone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S. Al Sawadi</th>\n",
+       "      <td>Sultan Ali Al Sawadi</td>\n",
+       "      <td>26</td>\n",
+       "      <td>12/14/1992</td>\n",
+       "      <td>172</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Saudi Arabia</td>\n",
+       "      <td>Al Raed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B. Maher</th>\n",
+       "      <td>Brian Maher</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11/1/2000</td>\n",
+       "      <td>185</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Republic of Ireland</td>\n",
+       "      <td>St. Patrick's Athletic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Han Hee Hoon</th>\n",
+       "      <td>??? ???</td>\n",
+       "      <td>28</td>\n",
+       "      <td>8/10/1990</td>\n",
+       "      <td>183</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Korea Republic</td>\n",
+       "      <td>Daegu FC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thiago Santana</th>\n",
+       "      <td>Thiago Santos Santana</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2/4/1993</td>\n",
+       "      <td>184</td>\n",
+       "      <td>79</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Santa Clara</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A. Babacan</th>\n",
+       "      <td>Atalay Babacan</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6/28/2000</td>\n",
+       "      <td>174</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>Galatasaray SK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>36556 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            long_name  age         dob  height_cm  weight_kg  \\\n",
+       "short_name                                                                     \n",
+       "I. Pop                      Ionu? Pop   21    8/1/1997        190         80   \n",
+       "Kim Tae Hwan                  ??? ???   29   7/24/1989        180         72   \n",
+       "L. Agbenyenu          Lumor Agbenyenu   22   8/10/1996        175         70   \n",
+       "Y. Tolosa               Yeison Tolosa   20   6/12/1999        170         68   \n",
+       "A. Barberis           Andrea Barberis   25  12/11/1993        177         72   \n",
+       "...                               ...  ...         ...        ...        ...   \n",
+       "S. Al Sawadi     Sultan Ali Al Sawadi   26  12/14/1992        172         63   \n",
+       "B. Maher                  Brian Maher   18   11/1/2000        185         78   \n",
+       "Han Hee Hoon                  ??? ???   28   8/10/1990        183         78   \n",
+       "Thiago Santana  Thiago Santos Santana   26    2/4/1993        184         79   \n",
+       "A. Babacan             Atalay Babacan   19   6/28/2000        174         70   \n",
+       "\n",
+       "                        nationality                    club  \n",
+       "short_name                                                   \n",
+       "I. Pop                      Romania         FC Hermannstadt  \n",
+       "Kim Tae Hwan         Korea Republic        Ulsan Hyundai FC  \n",
+       "L. Agbenyenu                  Ghana            RCD Mallorca  \n",
+       "Y. Tolosa                  Colombia          Deportivo Cali  \n",
+       "A. Barberis                   Italy                 Crotone  \n",
+       "...                             ...                     ...  \n",
+       "S. Al Sawadi           Saudi Arabia                 Al Raed  \n",
+       "B. Maher        Republic of Ireland  St. Patrick's Athletic  \n",
+       "Han Hee Hoon         Korea Republic                Daegu FC  \n",
+       "Thiago Santana               Brazil             Santa Clara  \n",
+       "A. Babacan                   Turkey          Galatasaray SK  \n",
+       "\n",
+       "[36556 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#upsample: increase the sampling rate -> frac>1 (Note: replacement parameter)\n",
+    "df.sample(frac=2, replace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e2ffce3",
+   "id": "74abb88f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#upsample: increase the sampling rate -> frac>1 (Note: replacement parameter)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
